# ghbrk

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  about.hbs  about.toml  deny.toml  deploy-local.sh  ghbrk.md  install.sh
.github/workflows/: ci.yml  release.yml
.serena/: project.yml
config/: config.example.yaml  policy.example.yaml
deploy/linux/: ghbrk.service  ghbrk.tmpfiles  install-credentials.sh  install.sh  provision-user.sh
docs/: agent-integration.md  audit-log.md  commands.md  index.md  install.md  policy.md
specs/: decision-log.md  mission.md
specs/_plans/add-ghbrk-core/: plan.md  tasks.md  verification-report.md
specs/_plans/add-release-lifecycle-ops/: decision-log.md  plan.md  tasks.md  verification-report.md
specs/_plans/add-version-flag/: decision-log.md  plan.md  tasks.md  verification-report.md
specs/_plans/change-explicit-gateway/: decision-log.md  plan.md  tasks.md  verification-report.md
specs/_plans/fix-doctor-bugs/: plan.md  tasks.md  verification-report.md
specs/_plans/fix-harness-failures/: plan.md  tasks.md  verification-report.md
specs/_plans/fix-policy-permission-verdict/: plan.md  tasks.md  verification-report.md
specs/cli/allow-command/: spec.md
specs/cli/cli-dispatch/: spec.md
specs/cli/doctor/: spec.md
specs/cli/doctor-permissions/: spec.md
src/: audit.rs  broker.rs  config.rs  credentials.rs  executor.rs  health_check.rs  lib.rs  main.rs  passthrough.rs  policy.rs  protocol.rs  resolver.rs  shim.rs
src/cmd/: allow.rs  check.rs  daemon.rs  doctor.rs  explain.rs  gateway.rs  gh.rs  git.rs  mod.rs  policy.rs  shim.rs
tests/: agent_install.sh  allow_command.rs  broker_server.rs  check.rs  cli_dispatch.rs  credential_escrow.rs  credential_injection.rs  deployment.rs  doctor.rs  executor.rs  explain.rs  passthrough.rs  policy_query.rs  resolver.rs  shim_client.rs  wire_framing.rs
tests/integration/: Dockerfile.devenv  Dockerfile.mock-github  Dockerfile.sshd  docker-compose.yml  harness.rs  mock_github_api.py
(+49 files in other folders)
